# finance-project-quant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FUTURE_WORK.md  GETTING_STARTED.md  HOW_IT_WORKS.md  LICENSE  PROMPT.md  README.md  RUNNING_IT.md  calendar.example.json  context.md  docker-compose.yml  inspo.md  mcp_server.py  opencode.json  plan.md  portfolio.json  pyproject.toml  start.sh
.github/workflows/: ci.yml
docs/: analyzer-guide.md  architecture.md  deployment.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
scripts/: daily.sh  install-cron.sh
src/alpha_engine/: __init__.py  config.py  health.py  net.py
src/alpha_engine/analyzers/: bollinger.py  correlation.py  crypto_onchain.py  crypto_trend.py  equity_trend.py  fno_oi.py  forex_carry.py  forex_trend.py  fundamentals.py  indian_equity.py  macd.py  macro_calendar.py  macro_context.py  multi_timeframe.py  portfolio_signal.py  risk.py  rsi.py  sentiment.py  support_resistance.py  volatility.py  volume.py  vwap.py
src/alpha_engine/cache/: interface.py  models.py
src/alpha_engine/cli/: main.py
src/alpha_engine/dashboard/: __init__.py  service.py
src/alpha_engine/execution/: __init__.py  dhan.py  executor.py  orders.py  webhook.py
src/alpha_engine/ingestion/: angelone.py  binance.py  binance_futures.py  breeze.py  calendar_file.py  coingecko.py  coingecko_pro.py  dhan.py  finnhub_news.py  fmp.py  fomc_calendar.py  fred.py  glassnode.py  indian_broker.py  indian_fno.py  nse_disclosures.py  oanda.py  rbi.py  rss.py  worldbank.py  yahoo.py
src/alpha_engine/narrative/: llm.py  narrator.py
src/alpha_engine/orchestrator/: __init__.py  engine.py
src/alpha_engine/quant/: __init__.py  black_scholes.py  factors.py  features.py  models.py  ranking.py  report.py
src/alpha_engine/schema/: signal.py
src/alpha_engine/synthesis/: synthesize.py
src/alpha_engine/validation/: __init__.py  backtest.py  calibrate.py  calibration.py  options_backtest.py  outcomes.py  recorder.py
tests/: conftest.py  test_analyzers.py  test_angelone.py  test_backtest_extended.py  test_cache.py  test_cache_retention.py  test_calibrate.py  test_calibration.py  test_cli.py  test_config.py  test_core.py  test_dashboard.py  test_dashboard_extended.py  test_data_dir.py  test_dhan.py  test_execution.py  test_factors.py  test_fixtures.py  test_fno.py  test_forex.py  test_forex_carry.py  test_fundamentals.py  test_health.py  test_indian_broker.py  test_ingestion_adapters.py  test_launcher.py  test_macro_breadth.py  test_markets.py  test_mcp_server.py  test_narrator.py  test_net.py  test_news.py  test_onchain.py  test_options_backtest.py  test_orchestrator.py  test_orchestrator_engine.py  test_portfolio.py  test_quant.py  test_ranking.py  test_risk.py  (+2 more)
tests/fixtures/: banknifty_chain.json  breeze_fno_nifty.json  dhan_fno_nifty.json  nifty_chain.json
web/: __init__.py  server.py
web/static/: app.js  index.html  style.css
