[project]
name = "alpha-engine"
version = "0.2.0b1"
description = "An open, deterministic research engine that turns market data into structured, confidence-scored signals, with joint stock+options backtesting and paper-first execution. Research and education only, not investment advice."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
alpha-engine = "alpha_engine.cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
reportPrivateImportUsage = false
reportGeneralTypeIssues = true
reportOptionalMemberAccess = true
reportOptionalSubscript = true
reportOptionalCall = true
